force-app/main/default/objects/Equipment__c/Equipment__c.object-meta.xml
<CustomObject>
    <description>Oggetto che contiene le dotazioni previse dalla tariffa TCP</description>
    <label>Anagrafica TCP</label>
    <nameField>
        <displayFormat>TCP-{0000}</displayFormat>
        <label>Anagrafica TCP Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Anagrafiche TCP</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>