force-app/main/default/objects/Equipment__c/fields/AssignmentDate__c.field-meta.xml
<CustomField>
    <fullName>AssignmentDate__c</fullName>
    <description>Indica la data in cui è stata assegnata la dotazione</description>
    <label>Data Assegnazione</label>
    <type>Date</type>
</CustomField>