force-app/main/default/objects/Equipment__c/fields/BlacklistReason__c.field-meta.xml
<CustomField>
    <fullName>BlacklistReason__c</fullName>
    <label>Motivo Blacklist</label>
    <length>255</length>
    <type>Text</type>
</CustomField>