force-app/main/default/objects/Equipment__c/fields/ClosingDate__c.field-meta.xml
<CustomField>
    <fullName>ClosingDate__c</fullName>
    <description>Indica la data in cui la dotazione è stata ritirata</description>
    <label>Data Chiusura</label>
    <type>Date</type>
</CustomField>