force-app/main/default/objects/Equipment__c/fields/Contract__c.field-meta.xml
<CustomField>
    <fullName>Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contract</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>Anagrafiche TCP</relationshipLabel>
    <relationshipName>Anagrafiche_TCP</relationshipName>
    <type>Lookup</type>
</CustomField>