force-app/main/default/objects/Equipment__c/fields/ContractCode__c.field-meta.xml
<CustomField>
    <fullName>ContractCode__c</fullName>
    <description>Codice contratto a cui è associata la dotazione</description>
    <externalId>true</externalId>
    <label>Codice Contratto</label>
    <length>255</length>
    <type>Text</type>
</CustomField>