force-app/main/default/objects/Equipment__c/fields/CustomerCode__c.field-meta.xml
<CustomField>
    <fullName>CustomerCode__c</fullName>
    <description>Codice cliente a cui è associata la dotazione</description>
    <externalId>true</externalId>
    <label>Codice Cliente</label>
    <length>255</length>
    <type>Text</type>
</CustomField>