force-app/main/default/objects/Equipment__c/fields/EquipmentCode__c.field-meta.xml
<CustomField>
    <fullName>EquipmentCode__c</fullName>
    <description>Codice univoco della dotazione</description>
    <externalId>true</externalId>
    <label>Codice Dotazione</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>