force-app/main/default/objects/Equipment__c/fields/ImplantCode__c.field-meta.xml
<CustomField>
    <fullName>ImplantCode__c</fullName>
    <externalId>true</externalId>
    <label>Codice Impianto</label>
    <length>255</length>
    <type>Text</type>
</CustomField>