force-app/main/default/objects/Equipment__c/fields/InventoryCode__c.field-meta.xml
<CustomField>
    <fullName>InventoryCode__c</fullName>
    <label>Codice Inventario</label>
    <length>50</length>
    <type>Text</type>
</CustomField>