force-app/main/default/objects/Equipment__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Stato della dotazione</description>
    <label>Stato Dotazione</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Consegnata</fullName>
            </value>
            <value>
                <fullName>Ritirata</fullName>
            </value>
            <value>
                <fullName>Black-list</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>