force-app/main/default/objects/Equipment__c/fields/Volumetry__c.field-meta.xml
<CustomField>
    <fullName>Volumetry__c</fullName>
    <label>Volumetria</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>