force-app/main/default/objects/Equipment__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CustomerCode__c</columns>
    <columns>ContractCode__c</columns>
    <columns>EquipmentCode__c</columns>
    <columns>ImplantCode__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>