force-app/main/default/objects/Equipment__c/listViews/Anagrafiche_TCP.listView-meta.xml
<ListView>
    <fullName>Anagrafiche_TCP</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Contract__c</columns>
    <columns>ServicePoint__c</columns>
    <columns>EquipmentCode__c</columns>
    <columns>InventoryCode__c</columns>
    <columns>AssignmentDate__c</columns>
    <columns>Status__c</columns>
    <columns>Type__c</columns>
    <columns>Volumetry__c</columns>
    <filterScope>Everything</filterScope>
    <label>Anagrafiche TCP</label>
</ListView>